# startup-idea-analyzer-agent

./: .gitignore  README.md  gradio_app.py  main.py  pyproject.toml
server/: market_data_server.py  serp_server.py  social_trends_server.py
src/: models.py  prompts.py  workflow.py
